--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,8 @@
       font-weight: 600;
     }
     main {
-      max-width: 1080px;
+      max-width: fit-content;
+      min-width: 900px;
       margin: 24px auto;
       padding: 0 20px;
     }
